@@ -1,5 +1,6 @@
 package com.voleksiienko.specforgeapi.core.domain.model.spec;
 
+import static com.voleksiienko.specforgeapi.core.domain.model.spec.SpecProperty.ensurePropertiesUniqueness;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
@@ -19,7 +20,6 @@ class SpecPropertyTest {
                 .type(new BooleanSpecType())
                 .required(true)
                 .description("Active status")
-                .examples(List.of("true", "false"))
                 .deprecated(true)
                 .build();
 
@@ -27,9 +27,8 @@ class SpecPropertyTest {
         assertThat(prop.getType()).isInstanceOf(BooleanSpecType.class);
         assertThat(prop.isRequired()).isTrue();
         assertThat(prop.getDescription()).isEqualTo("Active status");
-        assertThat(prop.getExamples()).containsExactly("true", "false");
+        assertThat(((BooleanSpecType) prop.getType()).getExamples()).containsExactly("true", "false");
         assertThat(prop.isDeprecated()).isTrue();
-        assertThat(prop.getChildren()).isEmpty();
     }
 
     @Test
@@ -41,12 +40,12 @@ class SpecPropertyTest {
 
         var parent = SpecProperty.builder()
                 .name("parentObj")
-                .type(new ObjectSpecType())
-                .children(List.of(child))
+                .type(ObjectSpecType.builder().children(List.of(child)).build())
                 .build();
 
-        assertThat(parent.getChildren()).hasSize(1);
-        assertThat(parent.getChildren().get(0).getName()).isEqualTo("childId");
+        var parentType = (ObjectSpecType) parent.getType();
+        assertThat(parentType.getChildren()).hasSize(1);
+        assertThat(parentType.getChildren().getFirst().getName()).isEqualTo("childId");
     }
 
     @Test
@@ -68,33 +67,10 @@ class SpecPropertyTest {
     }
 
     @Test
-    void shouldThrowWhenObjectTypeHasNoChildren() {
-        var builder = SpecProperty.builder()
-                .name("emptyObj")
-                .type(new ObjectSpecType())
-                .children(List.of());
-
-        assertThatThrownBy(builder::build)
-                .isInstanceOf(SpecModelValidationException.class)
-                .hasMessageContaining("must have children to define its structure");
-    }
-
-    @Test
-    void shouldThrowWhenPrimitiveTypeHasChildren() {
-        var child = SpecProperty.builder().name("c").type(new BooleanSpecType()).build();
-        var builder =
-                SpecProperty.builder().name("prim").type(new BooleanSpecType()).children(List.of(child));
-
-        assertThatThrownBy(builder::build)
-                .isInstanceOf(SpecModelValidationException.class)
-                .hasMessageContaining("is primitive and cannot have children");
-    }
-
-    @Test
     void shouldThrowIfNullPropertyIsPresentInList() {
         List<SpecProperty> listWithNull = Collections.singletonList(null);
 
-        assertThatThrownBy(() -> SpecProperty.ensurePropertiesUniqueness(listWithNull, "TestContext"))
+        assertThatThrownBy(() -> ensurePropertiesUniqueness(listWithNull))
                 .isInstanceOf(SpecModelValidationException.class)
                 .hasMessageContaining("cannot contain null properties");
     }
@@ -106,8 +82,7 @@ class SpecPropertyTest {
         var child2 =
                 SpecProperty.builder().name("dup").type(new BooleanSpecType()).build();
 
-        var builder =
-                SpecProperty.builder().name("parent").type(new ObjectSpecType()).children(List.of(child1, child2));
+        var builder = ObjectSpecType.builder().children(List.of(child1, child2));
 
         assertThatThrownBy(builder::build)
                 .isInstanceOf(SpecModelValidationException.class)
